example/secondfile/objects/MDF_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDF Budgets</relationshipLabel>
        <relationshipName>MDF_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Quarter__c</fullName>
        <label>MDF Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDF_Year__c</fullName>
        <label>Budget Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MDF Budget</label>
    <nameField>
        <displayFormat>BUD-{00000000}</displayFormat>
        <label>MDF Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDF Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MDF_Budget_Validation</fullName>
        <active>true</active>
        <description>this is to make sure that MDF Budget field is not accepting negative values.</description>
        <errorConditionFormula>Budget__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Budget__c</errorDisplayField>
        <errorMessage>The Budget should not be negative values.</errorMessage>
    </validationRules>
</CustomObject>